Improving session name check in policy-tool page.

Session name with '\' or '/' is not valid anymore.

Bug: 820546
Change-Id: Ib79acb5902aa8ef5c686e15463258e32519df052
Reviewed-on: https://chromium-review.googlesource.com/981304
Reviewed-by: Georges Khalil <georgesak@chromium.org>
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Owen Min <zmin@chromium.org>
Commit-Queue: Martin Rodriguez <rodmartin@google.com>
Cr-Commit-Position: refs/heads/master@{#547533}